Grammar diagram renderer: bug fix edge label wrapping.

--- a/src/treebank/edge-label.scss
+++ b/src/treebank/edge-label.scss
@@ -5,4 +5,5 @@
     line-height: 24px;
     background-color: rgba(255, 255, 255, 0.6);
     direction: rtl;
+    white-space: nowrap;
 }
